[package]
name = "e2ee"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "../README.md"
description = "Transport-agnostic end-to-end encryption framework in Rust."
homepage = "https://github.com/metwse/e2ee"
repository = "https://github.com/metwse/e2ee"
categories = ["cryptography"]
keywords = ["crypto"]

[package.metadata.docs.rs]
features = ["ring"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
std = ["once_cell/std"]
ring = ["dep:ring"]

[dependencies]
ring = { workspace = true, optional = true }
# only required for no-std
once_cell = { workspace = true }
