[package]
name = "e2ee"
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "../README.md"
description = "Transport-agnostic end-to-end encryption framework in Rust."
homepage = "https://github.com/metwse/e2ee"
repository = "https://github.com/metwse/e2ee"
categories = ["cryptography"]
keywords = ["crypto"]

[package.metadata.docs.rs]
default = ["aws-lc-rs"]

features = ["aws_lc_rs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
std = ["once_cell/std"]
aws-lc-rs = ["aws_lc_rs"]
aws_lc_rs = ["dep:aws-lc-rs"]

[dependencies]
aws-lc-rs = { workspace = true, optional = true }
# only required for no-std
once_cell = { workspace = true }
